<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@color/layout_background"
    android:layout_gravity="center_horizontal"
    app:layout_anchorGravity="center_vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_title"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="20dp"
            android:padding="25dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_weight"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="8dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >

                <EditText
                    android:id="@+id/weightEditText"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/_70"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    android:textColorHint="@color/text_hint"
                    android:layout_gravity="start"
                    android:inputType="number"
                    android:autofillHints=""
                    android:gravity="start"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_kg"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:gravity="start"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="20dp"
            android:padding="25dp"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_height"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="8dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >

                <EditText
                    android:id="@+id/heightEditText"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/_180"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    android:textColorHint="@color/text_hint"
                    android:layout_gravity="start"
                    android:inputType="number"
                    android:autofillHints=""
                    android:gravity="start"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_cm"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:gravity="start"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:background="@color/btn_background"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="20dp"
            android:padding="25dp"
            android:layout_marginTop="25dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/bmiTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"
                    xmlns:tools="http://schemas.android.com/tools"
                    tools:text="21.78"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/resultTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    xmlns:tools="http://schemas.android.com/tools"
                    tools:text="Healthy"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/descriptionTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-light"
                    xmlns:tools="http://schemas.android.com/tools"
                    tools:text="descripcion del resultado"
                    />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>